<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/sfondo"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/quiz_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:weightSum="2">

            <com.lorenzobraghetto.utils.AutoResizeTextView
                android:id="@+id/question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center_horizontal"
                android:text="Welcome"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textColor="#fff"
                android:textSize="40sp"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/edittext_name"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.2"
                android:hint="nome" />

            <Button
                android:id="@+id/button_start"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_weight="0.2"
                android:background="@drawable/tasto_inizio_drawable"
                android:text="@string/inizia"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/info"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.2"
                android:background="@drawable/tasto_inizio_drawable"
                android:text="@string/info"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/about"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.2"
                android:background="@drawable/tasto_inizio_drawable"
                android:text="@string/about"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/vediClassifica"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.2"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:singleLine="true"
                android:background="@drawable/tasto_inizio_drawable"
                android:text="@string/classifica"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/progressBarLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminateOnly="true"
                android:visibility="gone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="0.5"
                android:background="#ccffffff"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/testo_iniziale"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>